add register link btn

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
             <ul class="nav_btn">
                 <li><a href=""><i class="iconfont icon-sousuo5"></i></a></li>
                 <li><a href="">登录</a></li>
-                <li><a href="">注册</a></li>
+                <li><a href="register.html" target="_blank">注册</a></li>
             </ul>
         </div>
     </nav>
